# aws-motorshop-cdk

./: .gitignore  Cargo.toml  readme.md
http/: test.http
motorshop-cdk/: cdk.json  package-lock.json  package.json
motorshop-cdk/lib/: motorshop-cdk-stack.ts
motorshop-cdk/test/: motorshop-cdk.test.ts
motorshop-create-prospect-lambda/: Cargo.toml
motorshop-create-prospect-lambda/src/: main.rs  prospect_generator.rs
motorshop-domain/: Cargo.toml
motorshop-domain/src/: lib.rs  prospect.rs
motorshop-order-lambda/: Cargo.toml
motorshop-order-lambda/documentation/: message.json
motorshop-order-lambda/src/: main.rs
motorshop-publish-model-lambda/: Cargo.toml
motorshop-publish-model-lambda/src/: main.rs
