[package]
name = "motorshop-publish-model-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
lambda_runtime = "0.8.0"
aws-config = "0.56.0"
aws-sdk-dynamodb = "0.29.0"
lambda_http = "0.8.0"
serde_json = "1.0.66"
rusoto_core = "0.48.0"
rusoto_sns = "0.48.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
motorshop-domain = { path = "../motorshop-domain" }